write_state / read_state

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export(get_path)
 export(get_task_plan)
 export(get_topic)
 export(get_topics)
+export(read_state)
 export(run_task)
 export(set_topic)
+export(write_state)
 importFrom(tibble,tibble)
