--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ export(get_path)
 export(get_task_plan)
 export(get_topic)
 export(get_topics)
+export(last_affected_parts)
+export(read_affected_parts)
 export(read_dataset)
 export(read_state)
 export(run_task)
