中国大陆的工作日管理：方便为数据集补充工作日数

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,8 @@ export(read_dataset)
 export(read_state)
 export(run_task)
 export(set_topic)
+export(workdays)
+export(workdays_patch)
 export(write_dataset)
 export(write_state)
 importFrom(dplyr,anti_join)
