--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: glimmer
 Title: A framework to Manage Tasks for Data
-Version: 0.3.2.9000
+Version: 0.4.1.9000
 Authors@R: 
     person("homeway", "Xue", , "xuehongwei@qq.com", role = c("aut", "cre"))
 Description: Help R uses to write less code and do more.
@@ -12,7 +12,9 @@ Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Imports: 
+    rlang,
     tibble,
+    tidyr,
     dplyr,
     fs,
     purrr,
