--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,10 @@ export(get_topic)
 export(get_topics)
 export(import_redo)
 export(import_todo)
+export(risk_data_read)
+export(risk_model_create)
+export(risk_model_read)
+export(risk_model_run)
 export(set_topic)
 export(state_read)
 export(state_write)
