--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(ds_as_unique)
 export(ds_compare_schema)
 export(ds_diff_dataset)
 export(ds_diff_schema)
+export(ds_import)
 export(ds_last_affected)
 export(ds_read)
 export(ds_read_affected)
