风险模型：确定测试需求

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(ds_read_affected)
 export(ds_remove_path)
 export(ds_schema)
 export(ds_write)
+export(ds_yaml)
 export(get_path)
 export(get_topic)
 export(get_topics)
