输出疑点数据

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(get_topics)
 export(import_redo)
 export(import_todo)
 export(risk_data_read)
+export(risk_model_all)
 export(risk_model_create)
 export(risk_model_read)
 export(risk_model_run)
@@ -52,4 +53,5 @@ importFrom(tibble,tibble)
 importFrom(tibble,tribble)
 importFrom(tidyr,expand_grid)
 importFrom(tidyr,nest)
+importFrom(tidyr,unite)
 importFrom(yaml,write_yaml)
