疑点数据：允许标注和清理未处理部分

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,7 +18,9 @@ export(get_topic)
 export(get_topics)
 export(import_redo)
 export(import_todo)
+export(risk_data_clear)
 export(risk_data_read)
+export(risk_data_set)
 export(risk_model_all)
 export(risk_model_create)
 export(risk_model_read)
