task_dir: 列举执行脚本的文件夹

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(risk_model_run)
 export(set_topic)
 export(state_read)
 export(state_write)
+export(task_dir)
 export(task_read)
 export(task_run)
 export(workdays)
