--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(ds_remove_path)
 export(ds_schema)
 export(ds_write)
 export(ds_yaml)
+export(get_importing_folder)
 export(get_path)
 export(get_topic)
 export(get_topics)
