--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(risk_model_create)
 export(risk_model_read)
 export(risk_model_run)
 export(set_topic)
+export(state_all)
 export(state_read)
 export(state_write)
 export(task_dir)
