import_folders: 获取所有导入文件夹

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(get_importing_folder)
 export(get_path)
 export(get_topic)
 export(get_topics)
+export(import_folders)
 export(import_redo)
 export(import_todo)
 export(risk_data_clear)
