risk_model_run_all: 运行所有风险模型

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(risk_model_all)
 export(risk_model_create)
 export(risk_model_read)
 export(risk_model_run)
+export(risk_model_run_all)
 export(set_topic)
 export(state_all)
 export(state_read)
