load_config: 支持配置文件

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(get_topics)
 export(import_folders)
 export(import_redo)
 export(import_todo)
+export(load_config)
 export(risk_data_clear)
 export(risk_data_read)
 export(risk_data_set)
