--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,6 @@ export(ds_as_unique)
 export(ds_compare_schema)
 export(ds_diff_dataset)
 export(ds_diff_schema)
-export(ds_import)
 export(ds_last_affected)
 export(ds_read)
 export(ds_read_affected)
@@ -13,10 +12,13 @@ export(ds_remove_path)
 export(ds_schema)
 export(ds_write)
 export(ds_yaml)
+export(get_config)
 export(get_importing_folder)
 export(get_path)
 export(get_topic)
 export(get_topics)
+export(import_datasets)
+export(import_define)
 export(import_folders)
 export(import_redo)
 export(import_todo)
