升级配置项结构：config_init等函数

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,10 @@ export("%error%")
 export("%nin%")
 export("%not-regex%")
 export("%regex%")
+export(config_init)
+export(config_load)
+export(config_write)
+export(config_yaml)
 export(create_dir)
 export(ds_all)
 export(ds_as_unique)
@@ -20,7 +24,6 @@ export(ds_write)
 export(ds_write_yaml)
 export(ds_yaml)
 export(gen_batchNum)
-export(get_config)
 export(get_importing_folder)
 export(get_path)
 export(get_topic)
@@ -30,7 +33,6 @@ export(import_define)
 export(import_folders)
 export(import_redo)
 export(import_todo)
-export(load_config)
 export(remove_dir)
 export(risk_data_clear)
 export(risk_data_read)
@@ -40,7 +42,6 @@ export(risk_model_create)
 export(risk_model_read)
 export(risk_model_run)
 export(risk_model_run_all)
-export(set_topic)
 export(state_all)
 export(state_read)
 export(state_write)
