--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,10 +11,12 @@ export(config_write)
 export(config_yaml)
 export(create_dir)
 export(ds_all)
+export(ds_archive)
 export(ds_as_unique)
 export(ds_compare_schema)
 export(ds_diff_dataset)
 export(ds_diff_schema)
+export(ds_init)
 export(ds_last_affected)
 export(ds_read)
 export(ds_read_affected)
