dataset: ds_append, ds_submit, ds_read

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,20 +11,24 @@ export(config_write)
 export(config_yaml)
 export(create_dir)
 export(ds_all)
-export(ds_archive)
+export(ds_append)
 export(ds_as_unique)
 export(ds_compare_schema)
+export(ds_delete)
 export(ds_diff_dataset)
 export(ds_diff_schema)
+export(ds_files)
 export(ds_init)
 export(ds_last_affected)
 export(ds_read)
 export(ds_read_affected)
 export(ds_remove_path)
 export(ds_schema)
+export(ds_submit)
 export(ds_write)
-export(ds_write_yaml)
 export(ds_yaml)
+export(ds_yaml_schema)
+export(ds_yaml_write)
 export(gen_batchNum)
 export(get_importing_folder)
 export(get_path)
