--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,8 +17,11 @@ export(ds_compare_schema)
 export(ds_delete)
 export(ds_diff_dataset)
 export(ds_diff_schema)
+export(ds_expand_init)
 export(ds_files)
+export(ds_import_init)
 export(ds_init)
+export(ds_queue_init)
 export(ds_read)
 export(ds_remove_path)
 export(ds_schema)
@@ -27,6 +30,8 @@ export(ds_write)
 export(ds_yaml)
 export(ds_yaml_schema)
 export(ds_yaml_write)
+export(form_read)
+export(form_write)
 export(gen_batchNum)
 export(get_importing_folder)
 export(get_path)
@@ -37,6 +42,8 @@ export(import_define)
 export(import_folders)
 export(import_redo)
 export(import_todo)
+export(queue_read)
+export(queue_write)
 export(remove_dir)
 export(risk_data_clear)
 export(risk_data_read)
