task_import Part1

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,9 +19,7 @@ export(ds_diff_dataset)
 export(ds_diff_schema)
 export(ds_expand_init)
 export(ds_files)
-export(ds_import_init)
 export(ds_init)
-export(ds_queue_init)
 export(ds_read)
 export(ds_remove_path)
 export(ds_schema)
@@ -42,8 +40,6 @@ export(import_define)
 export(import_folders)
 export(import_redo)
 export(import_todo)
-export(queue_read)
-export(queue_write)
 export(remove_dir)
 export(risk_data_clear)
 export(risk_data_read)
@@ -58,6 +54,10 @@ export(state_read)
 export(state_write)
 export(task_dir)
 export(task_files)
+export(task_import_define)
+export(task_import_init)
+export(task_import_run)
+export(task_import_scan)
 export(task_run)
 export(workdays)
 export(workdays_patch)
