task_define: task_create, task_run

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,8 +28,6 @@ export(ds_write)
 export(ds_yaml)
 export(ds_yaml_schema)
 export(ds_yaml_write)
-export(form_read)
-export(form_write)
 export(gen_batchNum)
 export(get_importing_folder)
 export(get_path)
@@ -52,13 +50,17 @@ export(risk_model_run_all)
 export(state_all)
 export(state_read)
 export(state_write)
+export(task_add)
+export(task_create)
 export(task_dir)
 export(task_files)
 export(task_import_define)
 export(task_import_init)
 export(task_import_run)
 export(task_import_scan)
+export(task_read)
 export(task_run)
+export(task_run0)
 export(workdays)
 export(workdays_patch)
 importFrom(dplyr,anti_join)
