ds_write: 一次性执行追加和归档操作

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(ds_read)
 export(ds_remove_path)
 export(ds_schema)
 export(ds_submit)
+export(ds_write)
 export(ds_yaml)
 export(ds_yaml_schema)
 export(ds_yaml_write)
@@ -49,7 +50,6 @@ export(risk_model_run_all)
 export(state_all)
 export(state_read)
 export(state_write)
-export(task_add)
 export(task_create)
 export(task_dir)
 export(task_files)
@@ -57,6 +57,7 @@ export(task_import_define)
 export(task_import_init)
 export(task_import_run)
 export(task_import_scan)
+export(task_item_add)
 export(task_read)
 export(task_run)
 export(task_run0)
