task_all: 列举所有任务定义

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ export(risk_model_run_all)
 export(state_all)
 export(state_read)
 export(state_write)
+export(task_all)
 export(task_create)
 export(task_dir)
 export(task_files)
