--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,11 +17,18 @@ export(ds_delete)
 export(ds_diff_dataset)
 export(ds_diff_schema)
 export(ds_expand_init)
+export(ds_field)
 export(ds_files)
+export(ds_import_ignore)
+export(ds_import_init)
+export(ds_import_new)
+export(ds_import_scan)
 export(ds_init)
+export(ds_queue_init)
 export(ds_read)
 export(ds_remove_path)
 export(ds_schema)
+export(ds_schema_obj)
 export(ds_submit)
 export(ds_write)
 export(ds_yaml)
@@ -63,6 +70,7 @@ export(task_run)
 export(task_run0)
 export(workdays)
 export(workdays_patch)
+importFrom(arrow,schema)
 importFrom(dplyr,anti_join)
 importFrom(dplyr,arrange)
 importFrom(dplyr,case_when)
