--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,7 +70,36 @@ export(task_run)
 export(task_run0)
 export(workdays)
 export(workdays_patch)
+importFrom(arrow,binary)
+importFrom(arrow,bool)
+importFrom(arrow,boolean)
+importFrom(arrow,date32)
+importFrom(arrow,date64)
+importFrom(arrow,dictionary)
+importFrom(arrow,float)
+importFrom(arrow,float16)
+importFrom(arrow,float32)
+importFrom(arrow,float64)
+importFrom(arrow,halffloat)
+importFrom(arrow,int16)
+importFrom(arrow,int32)
+importFrom(arrow,int64)
+importFrom(arrow,int8)
+importFrom(arrow,large_binary)
+importFrom(arrow,large_utf8)
+importFrom(arrow,null)
+importFrom(arrow,open_dataset)
 importFrom(arrow,schema)
+importFrom(arrow,string)
+importFrom(arrow,time32)
+importFrom(arrow,time64)
+importFrom(arrow,timestamp)
+importFrom(arrow,uint16)
+importFrom(arrow,uint32)
+importFrom(arrow,uint64)
+importFrom(arrow,uint8)
+importFrom(arrow,utf8)
+importFrom(arrow,write_dataset)
 importFrom(dplyr,anti_join)
 importFrom(dplyr,arrange)
 importFrom(dplyr,case_when)
@@ -95,4 +124,5 @@ importFrom(tibble,tribble)
 importFrom(tidyr,expand_grid)
 importFrom(tidyr,nest)
 importFrom(tidyr,unite)
+importFrom(yaml,read_yaml)
 importFrom(yaml,write_yaml)
