--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,12 +19,7 @@ export(ds_diff_schema)
 export(ds_expand_init)
 export(ds_field)
 export(ds_files)
-export(ds_import_ignore)
-export(ds_import_init)
-export(ds_import_new)
-export(ds_import_scan)
 export(ds_init)
-export(ds_queue_init)
 export(ds_read)
 export(ds_remove_path)
 export(ds_schema)
@@ -39,11 +34,19 @@ export(get_importing_folder)
 export(get_path)
 export(get_topic)
 export(get_topics)
+export(import_dataset_init)
 export(import_datasets)
 export(import_define)
 export(import_folders)
+export(import_folders_all)
+export(import_folders_ignore)
+export(import_folders_scan)
 export(import_redo)
+export(import_task_gen)
+export(import_task_run)
 export(import_todo)
+export(queue_dataset_init)
+export(queue_run)
 export(remove_dir)
 export(risk_data_clear)
 export(risk_data_read)
@@ -118,6 +121,9 @@ importFrom(dplyr,semi_join)
 importFrom(dplyr,slice)
 importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
+importFrom(lubridate,as_date)
+importFrom(lubridate,as_datetime)
+importFrom(lubridate,now)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(tibble,tribble)
