ds_type: 将未知类型转换为__UNKNOWN__

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(ds_remove_path)
 export(ds_schema)
 export(ds_schema_obj)
 export(ds_submit)
+export(ds_type)
 export(ds_write)
 export(ds_yaml)
 export(ds_yaml_schema)
@@ -41,9 +42,9 @@ export(import_folders)
 export(import_folders_all)
 export(import_folders_ignore)
 export(import_folders_scan)
+export(import_folders_update)
 export(import_redo)
 export(import_task_gen)
-export(import_task_run)
 export(import_todo)
 export(queue_dataset_init)
 export(queue_run)
