queue_task_item: 构造队列中的任务项（列表）

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,13 +42,14 @@ export(import_folders)
 export(import_folders_all)
 export(import_folders_ignore)
 export(import_folders_scan)
-export(import_folders_update)
 export(import_redo)
 export(import_task_gen)
+export(import_task_run)
 export(import_todo)
 export(queue_batch_run)
 export(queue_batch_todo)
 export(queue_dataset_init)
+export(queue_task_item)
 export(remove_dir)
 export(risk_data_clear)
 export(risk_data_read)
