--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,8 @@ export(ds_diff_schema)
 export(ds_expand_init)
 export(ds_field)
 export(ds_files)
+export(ds_import_match)
+export(ds_import_write)
 export(ds_init)
 export(ds_read)
 export(ds_remove_path)
@@ -38,12 +40,10 @@ export(get_topics)
 export(import_dataset_init)
 export(import_datasets)
 export(import_define)
+export(import_files_all)
 export(import_folders)
-export(import_folders_all)
-export(import_folders_ignore)
-export(import_folders_scan)
 export(import_redo)
-export(import_task_gen)
+export(import_task_create)
 export(import_task_run)
 export(import_todo)
 export(queue_batch_run)
