queue: ds_task_queue_**

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,10 @@ export(ds_remove_path)
 export(ds_schema)
 export(ds_schema_obj)
 export(ds_submit)
+export(ds_task_queue_init)
+export(ds_task_queue_item)
+export(ds_task_queue_run)
+export(ds_task_queue_todo)
 export(ds_type)
 export(ds_write)
 export(ds_yaml)
@@ -46,10 +50,6 @@ export(import_redo)
 export(import_task_create)
 export(import_task_run)
 export(import_todo)
-export(queue_batch_run)
-export(queue_batch_todo)
-export(queue_dataset_init)
-export(queue_task_item)
 export(remove_dir)
 export(risk_data_clear)
 export(risk_data_read)
