rename: task_queue_**, import_dataset_init

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,18 +19,12 @@ export(ds_diff_schema)
 export(ds_expand_init)
 export(ds_field)
 export(ds_files)
-export(ds_import_match)
-export(ds_import_write)
 export(ds_init)
 export(ds_read)
 export(ds_remove_path)
 export(ds_schema)
 export(ds_schema_obj)
 export(ds_submit)
-export(ds_task_queue_init)
-export(ds_task_queue_item)
-export(ds_task_queue_run)
-export(ds_task_queue_todo)
 export(ds_type)
 export(ds_write)
 export(ds_yaml)
@@ -41,14 +35,16 @@ export(get_importing_folder)
 export(get_path)
 export(get_topic)
 export(get_topics)
-export(import_dataset_init)
 export(import_datasets)
 export(import_define)
 export(import_files_all)
+export(import_files_scan)
 export(import_folders)
+export(import_init)
 export(import_redo)
-export(import_task_create)
-export(import_task_run)
+export(import_task_match)
+export(import_task_queue_create)
+export(import_task_queue_run)
 export(import_todo)
 export(remove_dir)
 export(risk_data_clear)
@@ -71,6 +67,12 @@ export(task_import_init)
 export(task_import_run)
 export(task_import_scan)
 export(task_item_add)
+export(task_queue_init)
+export(task_queue_item)
+export(task_queue_param_from_yaml)
+export(task_queue_param_to_yaml)
+export(task_queue_run)
+export(task_queue_todo)
 export(task_read)
 export(task_run)
 export(task_run0)
