--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export("%error%")
 export("%nin%")
 export("%not-regex%")
 export("%regex%")
+export(build_task_queue_create)
+export(build_task_queue_run)
 export(config_init)
 export(config_load)
 export(config_write)
@@ -31,21 +33,15 @@ export(ds_yaml)
 export(ds_yaml_schema)
 export(ds_yaml_write)
 export(gen_batchNum)
-export(get_importing_folder)
 export(get_path)
 export(get_topic)
 export(get_topics)
-export(import_datasets)
-export(import_define)
 export(import_files_all)
 export(import_files_scan)
-export(import_folders)
 export(import_init)
-export(import_redo)
 export(import_task_match)
 export(import_task_queue_create)
 export(import_task_queue_run)
-export(import_todo)
 export(remove_dir)
 export(risk_data_clear)
 export(risk_data_read)
@@ -55,17 +51,8 @@ export(risk_model_create)
 export(risk_model_read)
 export(risk_model_run)
 export(risk_model_run_all)
-export(state_all)
-export(state_read)
-export(state_write)
 export(task_all)
 export(task_create)
-export(task_dir)
-export(task_files)
-export(task_import_define)
-export(task_import_init)
-export(task_import_run)
-export(task_import_scan)
 export(task_item_add)
 export(task_queue_init)
 export(task_queue_item)
@@ -75,7 +62,6 @@ export(task_queue_run)
 export(task_queue_todo)
 export(task_read)
 export(task_run)
-export(task_run0)
 export(workdays)
 export(workdays_patch)
 importFrom(arrow,binary)
