--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(ds_field)
 export(ds_files)
 export(ds_init)
 export(ds_read)
+export(ds_read0)
 export(ds_remove_path)
 export(ds_schema)
 export(ds_schema_obj)
