--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,7 +19,6 @@ export(ds_delete)
 export(ds_diff_dataset)
 export(ds_diff_schema)
 export(ds_expand_init)
-export(ds_field)
 export(ds_files)
 export(ds_init)
 export(ds_read)
@@ -33,6 +32,7 @@ export(ds_write)
 export(ds_yaml)
 export(ds_yaml_schema)
 export(ds_yaml_write)
+export(dt_field)
 export(gen_batchNum)
 export(get_path)
 export(get_topic)
