task-lib: 增加一些内置的图表函数

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,9 +52,18 @@ export(risk_model_create)
 export(risk_model_read)
 export(risk_model_run)
 export(risk_model_run_all)
+export(task_DT)
 export(task_all)
 export(task_create)
 export(task_item_add)
+export(task_plotly_area)
+export(task_plotly_bar)
+export(task_plotly_barpolar)
+export(task_plotly_hist)
+export(task_plotly_line)
+export(task_plotly_marker)
+export(task_plotly_pie)
+export(task_plotly_pie2)
 export(task_queue_init)
 export(task_queue_item)
 export(task_queue_param_from_yaml)
