--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,57 +74,27 @@ export(task_read)
 export(task_run)
 export(workdays)
 export(workdays_patch)
-importFrom(arrow,binary)
-importFrom(arrow,bool)
-importFrom(arrow,boolean)
-importFrom(arrow,date32)
-importFrom(arrow,date64)
-importFrom(arrow,dictionary)
-importFrom(arrow,float)
-importFrom(arrow,float16)
-importFrom(arrow,float32)
-importFrom(arrow,float64)
-importFrom(arrow,halffloat)
-importFrom(arrow,int16)
-importFrom(arrow,int32)
-importFrom(arrow,int64)
-importFrom(arrow,int8)
-importFrom(arrow,large_binary)
-importFrom(arrow,large_utf8)
-importFrom(arrow,null)
 importFrom(arrow,open_dataset)
 importFrom(arrow,schema)
-importFrom(arrow,string)
-importFrom(arrow,time32)
-importFrom(arrow,time64)
-importFrom(arrow,timestamp)
-importFrom(arrow,uint16)
-importFrom(arrow,uint32)
-importFrom(arrow,uint64)
-importFrom(arrow,uint8)
-importFrom(arrow,utf8)
 importFrom(arrow,write_dataset)
-importFrom(dplyr,anti_join)
 importFrom(dplyr,arrange)
-importFrom(dplyr,case_when)
-importFrom(dplyr,collect)
 importFrom(dplyr,filter)
-importFrom(dplyr,full_join)
 importFrom(dplyr,group_by)
-importFrom(dplyr,inner_join)
-importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
-importFrom(dplyr,n)
 importFrom(dplyr,rename)
-importFrom(dplyr,row_number)
 importFrom(dplyr,select)
-importFrom(dplyr,semi_join)
-importFrom(dplyr,slice)
-importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
 importFrom(lubridate,as_date)
 importFrom(lubridate,as_datetime)
 importFrom(lubridate,now)
+importFrom(plotly,add_bars)
+importFrom(plotly,add_histogram)
+importFrom(plotly,add_lines)
+importFrom(plotly,add_markers)
+importFrom(plotly,add_pie)
+importFrom(plotly,add_trace)
+importFrom(plotly,layout)
+importFrom(plotly,plot_ly)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(tibble,tribble)
