Fix: task_queue_run

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,11 +37,11 @@ export(gen_batchNum)
 export(get_path)
 export(get_topic)
 export(get_topics)
+export(import_dataset_read)
+export(import_dataset_task_match)
 export(import_files_all)
-export(import_files_read)
 export(import_files_scan)
 export(import_init)
-export(import_task_match)
 export(import_task_queue_create)
 export(import_task_queue_run)
 export(remove_dir)
