--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ export(task_plotly_line)
 export(task_plotly_marker)
 export(task_plotly_pie)
 export(task_plotly_pie2)
+export(task_queue_all)
 export(task_queue_init)
 export(task_queue_item)
 export(task_queue_param_from_yaml)
