增加helper函数：ds_as_datetime, ds_exists

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,10 +14,12 @@ export(config_yaml)
 export(create_dir)
 export(ds_all)
 export(ds_append)
+export(ds_as_datetime)
 export(ds_as_unique)
 export(ds_delete)
 export(ds_diff_dataset)
 export(ds_diff_schema)
+export(ds_exists)
 export(ds_expand_init)
 export(ds_files)
 export(ds_init)
