new import functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,13 +39,11 @@ export(gen_batchNum)
 export(get_path)
 export(get_topic)
 export(get_topics)
-export(import_dataset_read)
-export(import_dataset_task_match)
-export(import_files_all)
-export(import_files_scan)
+export(import_changed)
 export(import_init)
-export(import_task_queue_create)
-export(import_task_queue_run)
+export(import_run)
+export(import_scan)
+export(import_search)
 export(remove_dir)
 export(risk_data_clear)
 export(risk_data_read)
@@ -56,7 +54,6 @@ export(risk_model_read)
 export(risk_model_run)
 export(risk_model_run_all)
 export(task_DT)
-export(task_all)
 export(task_create)
 export(task_item_add)
 export(task_plotly_area)
@@ -78,6 +75,7 @@ export(task_read)
 export(task_run)
 export(task_script_dir_create)
 export(task_script_file_create)
+export(task_search)
 export(workdays)
 export(workdays_patch)
 importFrom(arrow,binary)
