--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,17 +15,19 @@ export(create_dir)
 export(ds_all)
 export(ds_append)
 export(ds_as_datetime)
+export(ds_as_deleted)
+export(ds_as_from)
 export(ds_as_unique)
 export(ds_delete)
 export(ds_diff_dataset)
 export(ds_diff_schema)
+export(ds_drop)
 export(ds_exists)
 export(ds_expand_init)
 export(ds_files)
 export(ds_init)
 export(ds_read)
 export(ds_read0)
-export(ds_remove_path)
 export(ds_schema)
 export(ds_schema_obj)
 export(ds_submit)
