task_run0, task_run, task_run_string, task_run_file, task_run_dir

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,6 +75,10 @@ export(task_queue_run)
 export(task_queue_todo)
 export(task_read)
 export(task_run)
+export(task_run0)
+export(task_run_dir)
+export(task_run_file)
+export(task_run_string)
 export(task_script_dir_create)
 export(task_script_file_create)
 export(task_search)
