task_run: support queue / task_run_expr

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,17 +66,16 @@ export(task_plotly_line)
 export(task_plotly_marker)
 export(task_plotly_pie)
 export(task_plotly_pie2)
-export(task_queue_all)
 export(task_queue_init)
 export(task_queue_item)
 export(task_queue_param_from_yaml)
 export(task_queue_param_to_yaml)
-export(task_queue_run)
-export(task_queue_todo)
+export(task_queue_search)
 export(task_read)
 export(task_run)
 export(task_run0)
 export(task_run_dir)
+export(task_run_expr)
 export(task_run_file)
 export(task_run_string)
 export(task_script_dir_create)
