risk: redefine risk-task functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,13 +48,10 @@ export(import_scan)
 export(import_search)
 export(remove_dir)
 export(risk_data_clear)
-export(risk_data_read)
-export(risk_data_set)
-export(risk_model_all)
+export(risk_data_init)
+export(risk_filter_add)
+export(risk_generater_add)
 export(risk_model_create)
-export(risk_model_read)
-export(risk_model_run)
-export(risk_model_run_all)
 export(task_DT)
 export(task_create)
 export(task_item_add)
@@ -78,8 +75,6 @@ export(task_run_dir)
 export(task_run_expr)
 export(task_run_file)
 export(task_run_string)
-export(task_script_dir_create)
-export(task_script_file_create)
 export(task_search)
 export(workdays)
 export(workdays_patch)
