risk: 完成一般流程测试

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(config_load)
 export(config_write)
 export(config_yaml)
 export(create_dir)
+export(dp_filter)
 export(ds_all)
 export(ds_append)
 export(ds_as_datetime)
@@ -47,10 +48,9 @@ export(import_run)
 export(import_scan)
 export(import_search)
 export(remove_dir)
+export(risk_data_build)
 export(risk_data_clear)
 export(risk_data_init)
-export(risk_filter_add)
-export(risk_generater_add)
 export(risk_model_create)
 export(task_DT)
 export(task_create)
