--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ export(remove_dir)
 export(risk_data_build)
 export(risk_data_clear)
 export(risk_data_init)
+export(risk_data_read)
 export(risk_model_create)
 export(task_DT)
 export(task_create)
