redefine: risk_model_search, task_id

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,8 +53,10 @@ export(risk_data_clear)
 export(risk_data_init)
 export(risk_data_read)
 export(risk_model_create)
+export(risk_model_search)
 export(task_DT)
 export(task_create)
+export(task_id)
 export(task_item_add)
 export(task_plotly_area)
 export(task_plotly_bar)
