task: 移除tasks$items中重复的scriptsTopic

--- a/tests/testthat/_sample_task_define/task_sample_define_param.yml
+++ b/tests/testthat/_sample_task_define/task_sample_define_param.yml
@@ -4,11 +4,9 @@ online: yes
 taskType: __UNKNOWN__
 desc: '-'
 taskTopic: TASK_DEFINE
+scriptsTopic: TASK_SCRIPTS
 createdAt: 2022-10-09 15:49:00
 items:
-  scriptsTopic:
-  - TASK_SCRIPTS
-  - TASK_SCRIPTS
   taskScript:
   - SIMPLE/a.R
   - result <- (x |> filter(age > myage))
