生成dp子任务（task_item_dp_add），或直接执行（task_run_dp）

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,6 +58,7 @@ export(task_DT)
 export(task_create)
 export(task_id)
 export(task_item_add)
+export(task_item_dp_add)
 export(task_plotly_area)
 export(task_plotly_bar)
 export(task_plotly_barpolar)
@@ -75,6 +76,7 @@ export(task_read)
 export(task_run)
 export(task_run0)
 export(task_run_dir)
+export(task_run_dp)
 export(task_run_expr)
 export(task_run_file)
 export(task_run_string)
