dp_read, dp_collect, dp_head, dp_tail, dp_n_max, dp_n_min

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,13 @@ export(config_load)
 export(config_write)
 export(config_yaml)
 export(create_dir)
+export(dp_collect)
 export(dp_filter)
+export(dp_head)
+export(dp_n_max)
+export(dp_n_min)
+export(dp_read)
+export(dp_tail)
 export(ds_all)
 export(ds_append)
 export(ds_as_datetime)
