--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(config_load)
 export(config_write)
 export(config_yaml)
 export(create_dir)
+export(dp_arrange)
 export(dp_collect)
 export(dp_filter)
 export(dp_head)
