--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(dp_head)
 export(dp_n_max)
 export(dp_n_min)
 export(dp_read)
+export(dp_rename)
 export(dp_select)
 export(dp_tail)
 export(ds_all)
