get_funs_dp, get_params

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,9 @@ export(ds_yaml_schema)
 export(ds_yaml_write)
 export(dt_field)
 export(gen_batchNum)
+export(get_funs_dp)
+export(get_funs_ds)
+export(get_params)
 export(get_path)
 export(get_topic)
 export(get_topics)
