修改内建任务的前缀为：gali_

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,16 +12,6 @@ export(config_load)
 export(config_write)
 export(config_yaml)
 export(create_dir)
-export(dp_arrange)
-export(dp_collect)
-export(dp_filter)
-export(dp_head)
-export(dp_n_max)
-export(dp_n_min)
-export(dp_read)
-export(dp_rename)
-export(dp_select)
-export(dp_tail)
 export(ds_all)
 export(ds_append)
 export(ds_as_datetime)
@@ -47,9 +37,19 @@ export(ds_yaml)
 export(ds_yaml_schema)
 export(ds_yaml_write)
 export(dt_field)
+export(gali_arrange)
+export(gali_collect)
+export(gali_filter)
+export(gali_head)
+export(gali_n_max)
+export(gali_n_min)
+export(gali_read)
+export(gali_rename)
+export(gali_select)
+export(gali_tail)
 export(gen_batchNum)
-export(get_funs_dp)
 export(get_funs_ds)
+export(get_funs_gali)
 export(get_params)
 export(get_path)
 export(get_topic)
@@ -70,7 +70,7 @@ export(task_DT)
 export(task_create)
 export(task_id)
 export(task_item_add)
-export(task_item_dp_add)
+export(task_item_gali_add)
 export(task_plotly_area)
 export(task_plotly_bar)
 export(task_plotly_barpolar)
