按自动发现的规则修改gali函数名称

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,16 +37,16 @@ export(ds_yaml)
 export(ds_yaml_schema)
 export(ds_yaml_write)
 export(dt_field)
-export(gali_arrange)
-export(gali_collect)
-export(gali_filter)
-export(gali_head)
-export(gali_n_max)
-export(gali_n_min)
-export(gali_read)
-export(gali_rename)
-export(gali_select)
-export(gali_tail)
+export(gali_dataset_arrange)
+export(gali_dataset_collect)
+export(gali_dataset_filter)
+export(gali_dataset_head)
+export(gali_dataset_n_max)
+export(gali_dataset_n_min)
+export(gali_dataset_rename)
+export(gali_dataset_select)
+export(gali_dataset_tail)
+export(gali_read_dataset)
 export(gen_batchNum)
 export(get_funs_ds)
 export(get_funs_gali)
@@ -88,9 +88,9 @@ export(task_read)
 export(task_run)
 export(task_run0)
 export(task_run_dir)
-export(task_run_dp)
 export(task_run_expr)
 export(task_run_file)
+export(task_run_gali)
 export(task_run_string)
 export(task_search)
 export(workdays)
