gali_read_dataset >> gali_read

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,7 +46,7 @@ export(gali_dataset_n_min)
 export(gali_dataset_rename)
 export(gali_dataset_select)
 export(gali_dataset_tail)
-export(gali_read_dataset)
+export(gali_read)
 export(gen_batchNum)
 export(get_funs_gali)
 export(get_params)
