--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ export(gali_dataset_rename)
 export(gali_dataset_select)
 export(gali_dataset_tail)
 export(gali_read)
+export(gali_write)
 export(gen_batchNum)
 export(get_funs_gali)
 export(get_params)
