--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(ds_yaml)
 export(ds_yaml_schema)
 export(ds_yaml_write)
 export(dt_field)
+export(gali_DT)
 export(gali_dataset_arrange)
 export(gali_dataset_collect)
 export(gali_dataset_filter)
@@ -59,6 +60,14 @@ export(import_init)
 export(import_run)
 export(import_scan)
 export(import_search)
+export(plot_area)
+export(plot_bar)
+export(plot_barpolar)
+export(plot_hist)
+export(plot_line)
+export(plot_marker)
+export(plot_pie)
+export(plot_pie2)
 export(remove_dir)
 export(risk_data_build)
 export(risk_data_clear)
@@ -66,19 +75,10 @@ export(risk_data_init)
 export(risk_data_read)
 export(risk_model_create)
 export(risk_model_search)
-export(task_DT)
 export(task_create)
 export(task_id)
 export(task_item_add)
 export(task_item_gali_add)
-export(task_plotly_area)
-export(task_plotly_bar)
-export(task_plotly_barpolar)
-export(task_plotly_hist)
-export(task_plotly_line)
-export(task_plotly_marker)
-export(task_plotly_pie)
-export(task_plotly_pie2)
 export(task_queue_init)
 export(task_queue_item)
 export(task_queue_param_from_yaml)
