--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export("%error%")
 export("%nin%")
 export("%not-regex%")
 export("%regex%")
+export(DT_table)
 export(build_task_queue_create)
 export(build_task_queue_run)
 export(config_init)
@@ -37,7 +38,6 @@ export(ds_yaml)
 export(ds_yaml_schema)
 export(ds_yaml_write)
 export(dt_field)
-export(gali_DT)
 export(gali_dataset_arrange)
 export(gali_dataset_collect)
 export(gali_dataset_filter)
