--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ export(gali_dataset_tail)
 export(gali_read)
 export(gali_write)
 export(gen_batchNum)
+export(get_funs)
 export(get_funs_gali)
 export(get_params)
 export(get_path)
