task_gali_add: 修改新流程的测试文件

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,9 +77,9 @@ export(risk_data_read)
 export(risk_model_create)
 export(risk_model_search)
 export(task_create)
+export(task_gali_add)
 export(task_id)
 export(task_item_add)
-export(task_item_gali_add)
 export(task_queue_init)
 export(task_queue_item)
 export(task_queue_param_from_yaml)
