gali_ds_count, gali_ds_add_count

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,8 +38,10 @@ export(ds_yaml)
 export(ds_yaml_schema)
 export(ds_yaml_write)
 export(dt_field)
+export(gali_ds_add_count)
 export(gali_ds_arrange)
 export(gali_ds_collect)
+export(gali_ds_count)
 export(gali_ds_filter)
 export(gali_ds_head)
 export(gali_ds_n_max)
