--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export(ds_yaml)
 export(ds_yaml_schema)
 export(ds_yaml_write)
 export(dt_field)
+export(gali_create_risk_model)
 export(gali_ds_add_count)
 export(gali_ds_arrange)
 export(gali_ds_collect)
@@ -50,7 +51,10 @@ export(gali_ds_rename)
 export(gali_ds_select)
 export(gali_ds_tail)
 export(gali_read)
+export(gali_read_risk)
+export(gali_search_risk_model)
 export(gali_write)
+export(gali_write_risk)
 export(gen_batchNum)
 export(get_funs)
 export(get_funs_gali)
@@ -72,10 +76,10 @@ export(plot_marker)
 export(plot_pie)
 export(plot_pie2)
 export(remove_dir)
-export(risk_data_build)
 export(risk_data_clear)
 export(risk_data_init)
 export(risk_data_read)
+export(risk_data_write)
 export(risk_model_create)
 export(risk_model_search)
 export(task_create)
