为疑点数据增加todo标志（避免is.na参与惰性计算）

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,8 @@ export(remove_dir)
 export(risk_data_clear)
 export(risk_data_init)
 export(risk_data_read)
+export(risk_data_set_done)
+export(risk_data_set_todo)
 export(risk_data_write)
 export(risk_model_create)
 export(risk_model_search)
