import_task_create: 定义导入任务

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ export(import_init)
 export(import_run)
 export(import_scan)
 export(import_search)
+export(import_task_create)
 export(plot_area)
 export(plot_bar)
 export(plot_barpolar)
