task_item_add: 简化参数名称

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,6 +80,10 @@ export(risk_data_write)
 export(risk_model_create)
 export(risk_model_search)
 export(task_create)
+export(task_dir_add)
+export(task_empty_add)
+export(task_expr_add)
+export(task_file_add)
 export(task_gali_add)
 export(task_id)
 export(task_item_add)
@@ -91,6 +95,7 @@ export(task_queue_search)
 export(task_read)
 export(task_run)
 export(task_search)
+export(task_string_add)
 export(workdays)
 export(workdays_patch)
 importFrom(arrow,binary)
