gali: 按照规则映射输入和输出

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -84,6 +84,7 @@ export(task_dir_add)
 export(task_empty_add)
 export(task_expr_add)
 export(task_file_add)
+export(task_func_add)
 export(task_gali_add)
 export(task_id)
 export(task_item_add)
