--- a/NAMESPACE
+++ b/NAMESPACE
@@ -88,6 +88,7 @@ export(task_func_add)
 export(task_gali_add)
 export(task_id)
 export(task_item_add)
+export(task_online)
 export(task_queue_init)
 export(task_queue_item)
 export(task_queue_param_from_yaml)
