--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,14 @@ export(gali_ds_n_min)
 export(gali_ds_rename)
 export(gali_ds_select)
 export(gali_ds_tail)
+export(gali_plot_area)
+export(gali_plot_bar)
+export(gali_plot_barpolar)
+export(gali_plot_hist)
+export(gali_plot_line)
+export(gali_plot_marker)
+export(gali_plot_pie)
+export(gali_plot_pie2)
 export(gali_read)
 export(gali_write)
 export(gali_write_risk)
@@ -62,14 +70,6 @@ export(import_run)
 export(import_scan)
 export(import_search)
 export(import_task_create)
-export(plot_area)
-export(plot_bar)
-export(plot_barpolar)
-export(plot_hist)
-export(plot_line)
-export(plot_marker)
-export(plot_pie)
-export(plot_pie2)
 export(remove_dir)
 export(risk_data_clear)
 export(risk_data_init)
