--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,6 @@ export("%error%")
 export("%nin%")
 export("%not-regex%")
 export("%regex%")
-export(DT_table)
 export(config_init)
 export(config_load)
 export(config_write)
@@ -35,6 +34,7 @@ export(ds_yaml)
 export(ds_yaml_schema)
 export(ds_yaml_write)
 export(dt_field)
+export(gali_DT)
 export(gali_ds_add_count)
 export(gali_ds_arrange)
 export(gali_ds_collect)
