--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export("%empty%")
 export("%error%")
 export("%nin%")
+export("%not-empty%")
 export("%not-regex%")
 export("%regex%")
 export(config_init)
@@ -46,21 +47,26 @@ export(gali_ds_n_min)
 export(gali_ds_rename)
 export(gali_ds_select)
 export(gali_ds_tail)
+export(gali_plot)
 export(gali_plot_area)
 export(gali_plot_bar)
 export(gali_plot_barpolar)
 export(gali_plot_hist)
+export(gali_plot_layout)
 export(gali_plot_line)
 export(gali_plot_marker)
 export(gali_plot_pie)
 export(gali_plot_pie2)
+export(gali_plot_trace)
 export(gali_read)
+export(gali_trace_markers)
 export(gali_write)
 export(gali_write_risk)
 export(gen_batchNum)
 export(get_funs)
 export(get_funs_gali)
 export(get_params)
+export(get_params_plot)
 export(get_path)
 export(get_topic)
 export(get_topics)
@@ -70,6 +76,7 @@ export(import_run)
 export(import_scan)
 export(import_search)
 export(import_task_create)
+export(plotly_schema_to_yaml)
 export(remove_dir)
 export(risk_data_clear)
 export(risk_data_init)
