--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,24 +11,35 @@ export(config_load)
 export(config_write)
 export(config_yaml)
 export(create_dir)
+export(ds_add_count)
 export(ds_all)
 export(ds_append)
+export(ds_arrange)
 export(ds_as_datetime)
 export(ds_as_deleted)
 export(ds_as_from)
 export(ds_as_unique)
+export(ds_collect)
+export(ds_count)
 export(ds_delete)
 export(ds_diff_dataset)
 export(ds_diff_schema)
 export(ds_drop)
 export(ds_exists)
 export(ds_files)
+export(ds_filter)
+export(ds_head)
 export(ds_init)
+export(ds_n_max)
+export(ds_n_min)
 export(ds_read)
 export(ds_read0)
+export(ds_rename)
 export(ds_schema)
 export(ds_schema_obj)
+export(ds_select)
 export(ds_submit)
+export(ds_tail)
 export(ds_type)
 export(ds_write)
 export(ds_yaml)
@@ -36,18 +47,6 @@ export(ds_yaml_schema)
 export(ds_yaml_write)
 export(dt_field)
 export(gali_DT)
-export(gali_ds_add_count)
-export(gali_ds_arrange)
-export(gali_ds_collect)
-export(gali_ds_count)
-export(gali_ds_filter)
-export(gali_ds_head)
-export(gali_ds_n_max)
-export(gali_ds_n_min)
-export(gali_ds_rename)
-export(gali_ds_select)
-export(gali_ds_tail)
-export(gali_plot)
 export(gali_plot_area)
 export(gali_plot_bar)
 export(gali_plot_barpolar)
@@ -57,15 +56,12 @@ export(gali_plot_line)
 export(gali_plot_marker)
 export(gali_plot_pie)
 export(gali_plot_pie2)
-export(gali_plot_trace)
-export(gali_read)
-export(gali_trace_markers)
-export(gali_write)
+export(gali_plotly)
+export(gali_trace)
 export(gali_write_risk)
 export(gen_batchNum)
-export(get_funs)
-export(get_funs_gali)
-export(get_params)
+export(get_ds_funs)
+export(get_funs_schema)
 export(get_params_plot)
 export(get_path)
 export(get_topic)
@@ -76,7 +72,6 @@ export(import_run)
 export(import_scan)
 export(import_search)
 export(import_task_create)
-export(plotly_schema_to_yaml)
 export(remove_dir)
 export(risk_data_clear)
 export(risk_data_init)
@@ -138,6 +133,7 @@ importFrom(dplyr,anti_join)
 importFrom(dplyr,arrange)
 importFrom(dplyr,case_when)
 importFrom(dplyr,collect)
+importFrom(dplyr,count)
 importFrom(dplyr,filter)
 importFrom(dplyr,full_join)
 importFrom(dplyr,group_by)
@@ -150,6 +146,8 @@ importFrom(dplyr,row_number)
 importFrom(dplyr,select)
 importFrom(dplyr,semi_join)
 importFrom(dplyr,slice)
+importFrom(dplyr,slice_max)
+importFrom(dplyr,slice_min)
 importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
 importFrom(lubridate,as_date)
