--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,17 +47,6 @@ export(ds_yaml_schema)
 export(ds_yaml_write)
 export(dt_field)
 export(gali_DT)
-export(gali_plot_area)
-export(gali_plot_bar)
-export(gali_plot_barpolar)
-export(gali_plot_hist)
-export(gali_plot_layout)
-export(gali_plot_line)
-export(gali_plot_marker)
-export(gali_plot_pie)
-export(gali_plot_pie2)
-export(gali_plotly)
-export(gali_trace)
 export(gali_write_risk)
 export(gen_batchNum)
 export(get_ds_funs)
@@ -72,6 +61,17 @@ export(import_run)
 export(import_scan)
 export(import_search)
 export(import_task_create)
+export(plot0)
+export(plot_area)
+export(plot_bar)
+export(plot_barpolar)
+export(plot_hist)
+export(plot_layout)
+export(plot_line)
+export(plot_marker)
+export(plot_pie)
+export(plot_pie2)
+export(plot_trace)
 export(remove_dir)
 export(risk_data_clear)
 export(risk_data_init)
