--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ export(gali_DT)
 export(gali_write_risk)
 export(gen_batchNum)
 export(get_ds_funs)
+export(get_fun_schema)
 export(get_funs_schema)
 export(get_params_plot)
 export(get_path)
