从plotly-schema提取绘制图表的参数

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,17 +61,18 @@ export(import_run)
 export(import_scan)
 export(import_search)
 export(import_task_create)
-export(plot0)
 export(plot_area)
 export(plot_bar)
 export(plot_barpolar)
 export(plot_hist)
+export(plot_init)
 export(plot_layout)
 export(plot_line)
 export(plot_marker)
 export(plot_pie)
 export(plot_pie2)
 export(plot_trace)
+export(plot_trace_schema_yaml)
 export(remove_dir)
 export(risk_data_clear)
 export(risk_data_init)
