开始建立：函数编辑器 shiny-editor-func

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,8 @@ export(ds_yaml)
 export(ds_yaml_schema)
 export(ds_yaml_write)
 export(dt_field)
+export(funcEditorServer)
+export(funcEditorUI)
 export(gali_DT)
 export(gen_batchNum)
 export(get_ds_funs)
