--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,7 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Suggests: 
+    shinytest2,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Imports: 
@@ -18,6 +19,7 @@ Imports:
     dplyr,
     fs,
     purrr,
+    shiny,
     arrow,
     lubridate,
     yaml,
