shiny modules: 调试预定义函数

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,8 +46,6 @@ export(ds_yaml)
 export(ds_yaml_schema)
 export(ds_yaml_write)
 export(dt_field)
-export(funcEditorServer)
-export(funcEditorUI)
 export(gali_DT)
 export(gen_batchNum)
 export(get_ds_funs)
@@ -84,6 +82,7 @@ export(risk_data_set_todo)
 export(risk_data_write)
 export(risk_model_create)
 export(risk_model_search)
+export(server_func_editor)
 export(task_create)
 export(task_dir_add)
 export(task_empty_add)
@@ -102,6 +101,7 @@ export(task_read)
 export(task_run)
 export(task_search)
 export(task_string_add)
+export(ui_func_editor)
 export(workdays)
 export(workdays_patch)
 importFrom(arrow,binary)
