--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ vignettes/*.pdf
 
 # R Environment Variables
 .Renviron
+# {shinytest2}: Ignore new debug snapshots for `$expect_values()`
+*_.new.png
