--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(ds_as_unique)
 export(ds_collect)
 export(ds_count)
 export(ds_delete)
+export(ds_demo)
 export(ds_diff_dataset)
 export(ds_diff_schema)
 export(ds_drop)
