在shiny中执行任务：重构框架

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,7 +83,10 @@ export(risk_data_set_todo)
 export(risk_data_write)
 export(risk_model_create)
 export(risk_model_search)
-export(server_func_editor)
+export(sm_server_func)
+export(sm_server_task)
+export(sm_ui_func)
+export(sm_ui_task)
 export(task_create)
 export(task_dir_add)
 export(task_empty_add)
@@ -102,7 +105,6 @@ export(task_read)
 export(task_run)
 export(task_search)
 export(task_string_add)
-export(ui_func_editor)
 export(workdays)
 export(workdays_patch)
 importFrom(arrow,binary)
