task_create中移除items；task_item_add使用globalVars赋值全局变量（params转为函数任务）；task_run不再支持未登记的函数（允许在扩展目录定义）

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,10 @@
 
 export("%empty%")
 export("%error%")
+export("%na%")
 export("%nin%")
 export("%not-empty%")
+export("%not-na%")
 export("%not-regex%")
 export("%regex%")
 export(config_init)
@@ -89,11 +91,10 @@ export(sm_ui_func)
 export(sm_ui_task)
 export(task_create)
 export(task_dir_add)
-export(task_empty_add)
 export(task_expr_add)
 export(task_file_add)
 export(task_func_add)
-export(task_id)
+export(task_global_add)
 export(task_item_add)
 export(task_online)
 export(task_queue_init)
