sm_preview_(ui|server)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -85,6 +85,8 @@ export(risk_data_set_todo)
 export(risk_data_write)
 export(risk_model_create)
 export(risk_model_search)
+export(sm_preview_server)
+export(sm_preview_ui)
 export(sm_server_func)
 export(sm_server_task)
 export(sm_ui_func)
