重建UI结构：sm_task >> sm_scripts >> sm_params

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -85,10 +85,16 @@ export(risk_data_set_todo)
 export(risk_data_write)
 export(risk_model_create)
 export(risk_model_search)
+export(sm_params_server)
+export(sm_params_ui)
 export(sm_preview_server)
 export(sm_preview_ui)
+export(sm_scripts_server)
+export(sm_scripts_ui)
 export(sm_server_func)
 export(sm_server_task)
+export(sm_task_server)
+export(sm_task_ui)
 export(sm_ui_func)
 export(sm_ui_task)
 export(task_create)
