sm_choose_task_[server|ui]

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -85,6 +85,8 @@ export(risk_data_set_todo)
 export(risk_data_write)
 export(risk_model_create)
 export(risk_model_search)
+export(sm_choose_task_server)
+export(sm_choose_task_ui)
 export(sm_params_server)
 export(sm_params_ui)
 export(sm_preview_server)
