--- a/NAMESPACE
+++ b/NAMESPACE
@@ -99,8 +99,11 @@ export(sm_task_server)
 export(sm_task_ui)
 export(sm_ui_func)
 export(sm_ui_task)
+export(task_clone)
 export(task_create)
 export(task_dir_add)
+export(task_discard)
+export(task_edit)
 export(task_expr_add)
 export(task_file_add)
 export(task_func_add)
@@ -114,8 +117,10 @@ export(task_queue_param_to_yaml)
 export(task_queue_search)
 export(task_read)
 export(task_run)
+export(task_save)
 export(task_search)
 export(task_string_add)
+export(task_submit)
 export(workdays)
 export(workdays_patch)
 importFrom(arrow,binary)
